
SVN
-------------------------------

XML:   Resolved issue CASTOR-1670 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF ability to specify failure step.
       Details: http://jira.codehaus.org/browse/CASTOR-1670
       (Edward - 20061030)

XML:   Resolved issue CASTOR-1615 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added HTML docs about prepared statement pooling.
       Details: http://jira.codehaus.org/browse/CASTOR-1615
       (Werner - 20061030)

XML:   Resolved issue CASTOR-1668 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added test for enums to XML test suite.
       Details: http://jira.codehaus.org/browse/CASTOR-1668
       (Werner - 20061030)

XML:   Resolved issue CASTOR-1653 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed type conversion error when unmarshalling enum fields.
       Details: http://jira.codehaus.org/browse/CASTOR-1653
       (Ralf - 20061028)

XML:   Resolved issue CASTOR-1667 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched org.exolab.castor.builder.package to use Jakarta's commons-logging for logging.
       Details: http://jira.codehaus.org/browse/CASTOR-1667
       (Werner - 20061028)

XML:   Resolved issue CASTOR-1642 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched Marshaller to use Jakarta's commons-logging for logging (adding additional
       logging statements of level warn for exceptions that so far got caught silently).
       Details: http://jira.codehaus.org/browse/CASTOR-1642
       (Werner - 20061027)

XML:   Resolved issue CASTOR-1660 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with namespace support for collections created using "container=false".
       Details: http://jira.codehaus.org/browse/CASTOR-1660
       (Werner - 20061027)
